# zerompk

./: Cargo.toml  LICENSE  README.md  README_JA.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode_no_panic.rs  roundtrip.rs
zerompk/: Cargo.toml
zerompk/benches/: common.rs  deserialize_complex.rs  deserialize_file.rs  deserialize_large_array.rs  deserialize_simple.rs  deserialize_zero_copy.rs  serialize_complex.rs  serialize_file.rs  serialize_large_array.rs  serialize_simple.rs
zerompk/src/: consts.rs  error.rs  impl.rs  lib.rs  read.rs  write.rs
zerompk/tests/: common.rs  derive.rs  deserialize.rs  schema_evolution.rs  serialize.rs  timestamp.rs
zerompk_derive/: Cargo.toml
zerompk_derive/src/: lib.rs
